cluster/apps/blog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog
  namespace: kloud-apps
spec:
  type: ClusterIP
  selector:
    app: blog
  ports:
    - port: 80
      targetPort: 80
